<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EZ File Transfer</string>
    <string name="configuration">Connect Bluetooth</string>
    <string name="paired_devices">List of Paired Devices</string>
    <string name="send_receive">Send/Receive File</string>
    <string name="wificonfig">WiFi Configuration</string>
    <string name="wifilistnetwork">WiFi List Network</string>
    <string name="wifiserver">WiFi Server</string>
    <string name="wificlient">WiFi Client Network</string>
    <string name="wifihome">WiFi File Transfer</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">Bluetooth File Transfer</string>
    <string name="action_settings">Settings</string>

    <string name="tv">TV</string>
    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>

</resources>
